content/sensu-go/5.16/learn/learn-sensu-go.md
---
title: "Learn Sensu Go with interactive training"
linkTitle: "Interactive Training Overview"
description: "Get familiar with Sensu terminology. Read our glossary to learn the definitions of common Sensu terms, including agent, asset, backend, check, event, and many more. Bonus: each term links to a corresponding guide!"
weight: 10
version: "5.16"
product: "Sensu Go"
menu:
  sensu-go-5.16:
    parent: interactive-training
---

- [Learn Sensu in 15 minutes](#learn-sensu-in-15-minutes)
- [Up and running with Sensu Go](#up-and-running-with-sensu-go)

Sensu is the industry-leading telemetry and service health-checking solution for multi-cloud monitoring at scale.

Our interactive training tutorials help you get started with Sensu Go, using only your browser.
With these tutorials, you can learn how to automate your monitoring workflows, gain deep visibility into systems that are important to your business operations, get complete control over your alerts, and integrate anywhere, including with the tools you're already using.

## Learn Sensu in 15 minutes

This interactive tutorial demonstrates how to:

- Deploy a basic Sensu stack.
- Log in to the Sensu web UI.
- Create a monitoring event and use Sensu to send alerts based on the event to a Slack channel.
- Use a Sensu agent to automatically produce events, then store event data with InfluxDB and visualize it with Grafana.

[Launch **Learn Sensu in 15 minutes**][1].

## Up and running with Sensu Go

This interactive tutorial will help you get Sensu Go up and running from scratch, using only your browser.
We've provisioned a CentOS 7 host for you, with an Nginx webserver already installed and running.
When you complete this tutorial, your system will have both the Sensu backend and agent running to monitor the local Nginx service.

[Launch **Up and running with Sensu Go**][2].

[1]: ../learn-in-15/
[2]: ../up-and-running/
